page content spacing correction

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -157,10 +157,6 @@ button {
 
 /* Nav Tabs */
 .nav-tabs-wrapper {
-  position: fixed;
-  top: 55px;
-  left: 0;
-  width: 100%;
   background-color: var(--clr-white);
   border-bottom: 1px solid rgba(40, 45, 55, 0.26);
 }
@@ -169,7 +165,7 @@ button {
   .nav-tabs-wrapper {
     position: static;
     background-color: var(--clr-background);
-    margin: 20px 0 32px;
+    margin: 10px 0 32px;
   }
 }
 
@@ -185,12 +181,19 @@ button {
 .nav-tabs .nav-link {
   border-bottom: 3px solid transparent;
   color: inherit;
-  font-size: 1.125rem;
+  font-size: 1.12rem;
   font-weight: var(--fw-medium);
   text-decoration: none;
   white-space: nowrap;
   display: flex;
-  padding: 12px 24px;
+  padding: 14px 24px;
+}
+
+@media (min-width: 992px) {
+  .nav-tabs .nav-link {
+    font-size: 1.125rem;
+    padding: 12px 24px;
+  }
 }
 
 .nav-tabs .nav-link.active {
@@ -213,6 +216,7 @@ button {
 /*-------------------*/
 
 .admin-container {
+  position: relative;
   display: flex;
   min-height: 100vh;
   overflow-y: hidden;
@@ -223,7 +227,7 @@ button {
 /*---------------*/
 .sidebar {
   height: 100vh;
-  position: sticky;
+  position: absolute;
   left: 0;
   top: 0;
   bottom: 0;
@@ -405,6 +409,7 @@ button {
   flex: 1;
   height: 100vh;
   overflow-y: auto;
+  padding-top: 50px;
 }
 
 @media (min-width: 992px) {
@@ -419,9 +424,9 @@ button {
   font-size: 0.85rem;
   margin-left: -4px;
   margin-bottom: 0.8em;
-  display: none;
   position: sticky;
   background-color: var(--clr-background);
+  display: none;
 }
 
 @media (min-width: 992px) {
@@ -526,7 +531,7 @@ button {
   }
 }
 
-/* .notifications {
+.notifications {
   position: relative;
   cursor: pointer;
   color: var(--text-color);
@@ -549,12 +554,11 @@ button {
 }
 
 .page-content {
-  padding: 25px;
   flex: 1;
-} */
+}
 
 /* Cards */
-/* .cards-container {
+.cards-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
@@ -613,10 +617,10 @@ button {
 .card-info p {
   font-size: 1.3rem;
   font-weight: 600;
-} */
+}
 
 /* Table */
-/* .content-section {
+.content-section {
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -704,11 +708,11 @@ tr:hover {
 
 .action-btn:hover {
   color: var(--primary-color);
-} */
+}
 
 /* Responsive Styles */
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
   .cards-container {
     grid-template-columns: 1fr 1fr;
   }
@@ -731,10 +735,10 @@ tr:hover {
   td {
     padding: 8px 10px;
   }
-} */
+}
 
 /* Styles pour les pages de listing */
-/* .data-table {
+.data-table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
@@ -822,7 +826,7 @@ tr:hover {
   font-size: 0.9rem;
 }
 
-.btn {
+/* .btn {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -832,7 +836,7 @@ tr:hover {
   cursor: pointer;
   transition: all 0.3s ease;
   border: 1px solid transparent;
-}
+} */
 
 .btn i {
   margin-right: 8px;
@@ -886,7 +890,7 @@ tr:hover {
 
 .dropdown-item:hover {
   background-color: #f8f9fa;
-} */
+}
 
 /* Styles pour la page de détail */
 /* .detail-header {
